--- a/Frontend/Verification_Ind_admin.html
+++ b/Frontend/Verification_Ind_admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Welfare - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Welfare - Individuals</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -150,8 +150,18 @@
         let volunteers = []; // Global variable to store volunteer data
 
         async function fetchVolunteers() {
+            const existingMessage = document.getElementById('empty-message');
+            if (existingMessage) {
+                ngoContainer.removeChild(existingMessage);
+            }
+
             try {
                 const token = localStorage.getItem('authToken');
+                if (!token) {
+                    alert("Authorization token is missing. Please login");
+                    window.location.href = "Login.html";
+                    return;
+                }
                 const response = await fetch(`${BACKEND_URL}/admin/getallunverifiedvolunteers`, {
                     method: "GET",
                     headers: {
@@ -159,8 +169,16 @@
                         'Authorization': token,
                     }
                 });
+                if (response.status === 401) {
+                    alert("Not authorised to access this route");
+                    localStorage.clear();
+                    window.location.assign("Login.html");
+                    return;
+                }
                 if (response.status !== 200) {
-                    alert('Failed to fetch volunteers data');
+                    const data = await response.json();
+                    alert("Failed to fetch volunteers data");
+                    console.log(data.message);
                     return;
                 }
                 volunteers = await response.json();
@@ -172,6 +190,10 @@
                 alert('Error fetching data'); // Handle error
             }
         }
+        function viewLocationOnMap(latitude, longitude) {
+            const mapUrl = `https://www.google.com/maps/search/?api=1&query=${latitude},${longitude}`;
+            window.open(mapUrl, "_blank"); // Opens the map URL in a new tab/window
+        }
 
         function displayVolunteers() {
             const container = document.getElementById('volunteer-container');
@@ -181,7 +203,7 @@
                 const message = document.createElement('div');
                 message.className = 'message-card'; // Apply custom message-card class
                 message.textContent = 'No Pending Requests';
-
+                message.id = 'empty-message';
                 container.appendChild(message);
                 return;
             }
@@ -204,12 +226,15 @@
                                                 <p class="card-text">Address Line 2: ${volunteer.home_address.address_line_2 || ''}</p>
                                             </div>
                                             <div class="col-md-6">
-                                                <p class="card-text">City: ${volunteer.home_address.city}</p>
+                                                <p class="card-text mt-2">City: ${volunteer.home_address.city}</p>
                                                 <p class="card-text">State: ${volunteer.home_address.state}</p>
                                                 <p class="card-text">Zip Code: ${volunteer.home_address.zip_code}</p>
-                                                <p class="card-text">Country: ${volunteer.home_address.country}</p>
-                                                <p class="card-text">Latitude: ${volunteer.home_address.geo_location.latitude}</p>
-                                                <p class="card-text">Longitude: ${volunteer.home_address.geo_location.longitude}</p>
+                                               <p class="card-text">Location: 
+                                                <a href="javascript:void(0);" onclick="viewLocationOnMap(${volunteer.home_address.geo_location.latitude}, ${volunteer.home_address.geo_location.longitude})">
+                                                    Click here to view on map
+                                                </a>
+                                                </p>
+                                                
                                             </div>
                                         </div>
                                         <div class="text-center mt-3">
@@ -217,7 +242,7 @@
                                                     onclick="confirmVerifyVolunteer('${volunteer._id}')">Verify Volunteer</button>
                                         </div>
                                         <div class="text-center mt-3">
-                                            <button class="btn btn-danger btn-verify" style="border-radius: 5px;"
+                                            <button class="btn btn-danger btn-verify ml-3" style="border-radius: 5px;"
                                                     onclick="confirmDeleteVolunteer('${volunteer._id}')">Delete Request</button>
                                         </div>
                                     </div>
@@ -237,7 +262,7 @@
                 const message = document.createElement('div');
                 message.className = 'message-card'; // Apply custom message-card class
                 message.textContent = 'No Pending Requests';
-
+                message.id = 'empty-message';
                 container.appendChild(message);
                 return;
             }
@@ -260,12 +285,14 @@
                                                 <p class="card-text">Address Line 2: ${volunteer.home_address.address_line_2 || ''}</p>
                                             </div>
                                             <div class="col-md-6">
-                                                <p class="card-text">City: ${volunteer.home_address.city}</p>
+                                                <p class="card-text mt-2">City: ${volunteer.home_address.city}</p>
                                                 <p class="card-text">State: ${volunteer.home_address.state}</p>
                                                 <p class="card-text">Zip Code: ${volunteer.home_address.zip_code}</p>
-                                                <p class="card-text">Country: ${volunteer.home_address.country}</p>
-                                                <p class="card-text">Latitude: ${volunteer.home_address.geo_location.latitude}</p>
-                                                <p class="card-text">Longitude: ${volunteer.home_address.geo_location.longitude}</p>
+                                               <p class="card-text">Location: 
+                                                <a href="javascript:void(0);" onclick="viewLocationOnMap(${volunteer.home_address.geo_location.latitude}, ${volunteer.home_address.geo_location.longitude})">
+                                                    Click here to view on map
+                                                </a>
+                                                </p>
                                             </div>
                                         </div>
                                         <div class="text-center mt-3">
@@ -273,7 +300,7 @@
                                                     onclick="confirmVerifyVolunteer('${volunteer._id}')">Verify Volunteer</button>
                                         </div>
                                         <div class="text-center mt-3">
-                                            <button class="btn btn-danger btn-verify" style="border-radius: 5px;"
+                                            <button class="btn btn-danger btn-verify ml-3" style="border-radius: 5px;"
                                                     onclick="confirmDeleteVolunteer('${volunteer._id}')">Delete Request</button>
                                         </div>
                                     </div>
@@ -287,14 +314,15 @@
 
         async function VerifyVolunteer(vol_id) {
             try {
-                const temp = {
-                    vol_id: vol_id
-                }
-
                 const formData = new FormData();
                 formData.append('vol_id', vol_id);
 
                 const token = localStorage.getItem('authToken');
+                if (!token) {
+                    alert("Authorization token is missing. Please login");
+                    window.location.href = "Login.html";
+                    return;
+                }
                 const response = await fetch(`${BACKEND_URL}/admin/verifyvolunteer`, {
                     method: 'POST',
                     headers: {
@@ -302,6 +330,18 @@
                     },
                     body: formData,
                 });
+                if (response.status === 401) {
+                    alert("Not authorised to access this route");
+                    localStorage.clear();
+                    window.location.assign("Login.html");
+                    return;
+                }
+                if (response.status !== 200) {
+                    const data = await response.json();
+                    alert("Failed to fetch volunteers data");
+                    console.log(data.message);
+                    return;
+                }
                 if (response.status === 201) {
                     const volCard = document.getElementById('volunteer-container');
                     volCard.innerHTML = '';
@@ -309,9 +349,6 @@
                     searchInput.value = '';
                     alert('Volunteer verified successfully');
                     fetchVolunteers();
-                } else {
-                    const data = await response.json();
-                    alert(`Error: ${data.message}`); // Display error message from the response
                 }
             } catch (error) {
                 alert('Error verifying volunteer'); // Handle error
@@ -321,6 +358,11 @@
         async function deleteVolunteer(id) {
             try {
                 const token = localStorage.getItem('authToken');
+                if (!token) {
+                    alert("Authorization token is missing. Please login");
+                    window.location.href = "Login.html";
+                    return;
+                }
                 const response = await fetch(`${BACKEND_URL}/admin/deleteunverifiedvolunteer/${id}`, {
                     method: 'DELETE',
                     headers: {
@@ -328,6 +370,18 @@
                         'Authorization': token,
                     },
                 });
+                if (response.status === 401) {
+                    alert("Not authorised to access this route");
+                    localStorage.clear();
+                    window.location.assign("Login.html");
+                    return;
+                }
+                if (response.status !== 200) {
+                    const data = await response.json();
+                    alert("Failed to fetch volunteers data");
+                    console.log(data.message);
+                    return;
+                }
                 if (response.status === 200) {
                     const restaurantCard = document.getElementById('volunteer-container');
                     restaurantCard.innerHTML = '';
@@ -335,9 +389,6 @@
                     const searchInput = document.getElementById('searchInput');
                     searchInput.value = '';
                     fetchVolunteers();
-                } else {
-                    const data = await response.json();
-                    alert(`Error: ${data.message}`); // Display error message from the response
                 }
             } catch (error) {
                 console.error(error);
@@ -345,7 +396,9 @@
             }
         }
 
-        window.onload = fetchVolunteers();
+        document.addEventListener('DOMContentLoaded', async () => {
+            await fetchVolunteers();
+        });
     </script>
 
     <script>
@@ -365,12 +418,20 @@
 
             // Perform search on each input event
             searchInput.addEventListener('input', () => {
+                const existingMessage = document.getElementById('empty-message');
+                if (existingMessage) {
+                    ngoContainer.removeChild(existingMessage);
+                }
                 const query = searchInput.value.toLowerCase();
                 const filteredVolunteers = volunteers.filter(volunteer => volunteer.full_name.toLowerCase().includes(query));
                 displayFilteredVolunteers(filteredVolunteers);
             });
 
             clearButton.addEventListener('click', () => {
+                const existingMessage = document.getElementById('empty-message');
+                if (existingMessage) {
+                    ngoContainer.removeChild(existingMessage);
+                }
                 searchInput.value = '';
                 displayVolunteers();
             });
