--- a/Frontend/accepted_donations_ngo.html
+++ b/Frontend/accepted_donations_ngo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>NGO's Food Transactions</title>
+    <title>Welfare-NGO's Food Transactions</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -78,30 +78,32 @@
             flex: 1;
         }
 
-        .btn-success {
-            border-radius: 4px;
-        }
-
         .photo-container {
-            max-width: 90%;
-            /* Adjust as needed */
+            width: 100%;
+            max-width: 600px; /* Maximum width for larger screens */
             margin: 0 auto;
             overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 60vh; /* Responsive height based on viewport */
         }
 
         .photo-tile {
             display: flex;
-            flex-wrap: nowrap;
-            /* Ensure photos stay in a row */
+            flex-direction: row;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            justify-content: center;
+            align-items: center;
         }
 
         .tile-photo {
             max-width: 100%;
-            /* Ensures each photo fits within its container */
-            height: auto;
-            /* Maintain aspect ratio */
-            margin-right: 10px;
-            /* Space between photos */
+            max-height: 100%;
+            object-fit: contain;
+            display: none; /* Hide all photos initially */
         }
 
         .message-card {
@@ -248,8 +250,8 @@
                     </form>
                 </div>
                 <div class="modal-footer" style="justify-content: center;">
-                    <button type="button" class="btn btn-primary" onclick="submitAcceptForm(event)">Submit</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary mt-3" onclick="submitAcceptForm(event)">Submit</button>
+                    <button type="button" class="btn btn-secondary mt-3 ml-3" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
@@ -394,7 +396,7 @@
                             <p class="card-text">Packaged: ${donation.packaged ? 'Yes' : 'No'}</p>
                             <p class="card-text">Pickup Address: ${donation.pickupLocation.address.address_line_1}${donation.pickupLocation.address.address_line_2 ? ', ' + donation.pickupLocation.address.address_line_2 : ''}, ${donation.pickupLocation.address.city}</p>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 mt-2">
                             <p class="card-text">Location: 
                                                 <a href="javascript:void(0);" 
                                                     onclick="viewLocationOnMap(${donation.pickupLocation.geo_location.latitude},${donation.pickupLocation.geo_location.longitude})">
@@ -409,9 +411,9 @@
                             <p class="card-text">Additional Notes: ${donation.additionalNotes || 'None'}</p>
                         </div>
                     </div>
-                    <div class="text-center mt-3">
-                        <button class="btn btn-success btn-accept" onclick="showAcceptForm('${donation._id}')">Verify Donation</button>
-                        <button class="btn btn-primary btn-view-photos ml-2" onclick="showPhotos(${JSON.stringify(donation.food_photos).replace(/"/g, '&quot;')})">View Photos</button>
+                    <div class="text-center mt-1">
+                        <button class="btn btn-success btn-accept mt-3" onclick="showAcceptForm('${donation._id}')">Verify Donation</button>
+                        <button class="btn btn-primary btn-view-photos ml-2 mt-3" onclick="showPhotos(${JSON.stringify(donation.food_photos).replace(/"/g, '&quot;')})">View Photos</button>
                     </div>
                 </div>
             `;
@@ -424,12 +426,12 @@
     <script>
         async function submitAcceptForm(event) {
             event.preventDefault(); // Prevent the default form submission behavior
+            const form = document.getElementById('acceptForm');
+            if (!form.checkValidity()) {
+                alert('Please fill out all required fields.');
+                return;
+            }
             if (confirm('Are you sure you wanna submit form ?')){
-                const form = document.getElementById('acceptForm');
-                if (!form.checkValidity()) {
-                    alert('Please fill out all required fields.');
-                    return;
-                }
                 const formData = new FormData(form);
                 try {
                     const token = localStorage.getItem('authToken');
@@ -479,7 +481,9 @@
                 img.src = photo;
                 img.alt = `Photo ${index + 1}`;
                 img.className = 'tile-photo';
-                img.style.display = index === 0 ? 'block' : 'none'; // Show first photo initially
+                if (index === 0) {
+                    img.style.display = 'block'; // Display the first photo initially
+                }
                 photoContainer.appendChild(img);
             });
 
@@ -525,7 +529,7 @@
             newInput.type = 'tel';
             newInput.className = 'form-control phone-input';
             newInput.name = 'phone_numbers';
-            newInput.id = id = 'phone_numbers';
+            newInput.id = 'phone_numbers';
             phoneNumbersDiv.appendChild(newInput);
         }
 
