--- a/Frontend/accepted_donations_restaurant.html
+++ b/Frontend/accepted_donations_restaurant.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Accepted Donations</title>
+    <title>Welfare -Accepted Donations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -28,10 +28,6 @@
             top: 0;
         }
 
-        .btn-success {
-            border-radius: 4px;
-        }
-
         .modal-content {
             align-items: left;
         }
@@ -40,29 +36,6 @@
             width: 100%;
             max-width: 600px;
             margin: auto;
-        }
-
-        .star-rating {
-            display: flex;
-            flex-direction: row-reverse;
-            justify-content: left;
-        }
-
-        .star-rating input[type="radio"] {
-            display: none;
-        }
-
-        .star-rating label {
-            color: #ccc;
-            font-size: 2em;
-            padding: 0 0.1em;
-            cursor: pointer;
-            transition: color 0.2s;
-        }
-
-        .star-rating input[type="radio"]:checked~label,
-        .star-rating input[type="radio"]:checked~label~label {
-            color: #f5b301;
         }
 
         .form-control {
@@ -105,25 +78,31 @@
         }
 
         .photo-container {
-            max-width: 90%;
-            /* Adjust as needed */
+            width: 100%;
+            max-width: 600px; /* Maximum width for larger screens */
             margin: 0 auto;
             overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 60vh; /* Responsive height based on viewport */
         }
 
         .photo-tile {
             display: flex;
-            flex-wrap: nowrap;
-            /* Ensure photos stay in a row */
+            flex-direction: row;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            justify-content: center;
+            align-items: center;
         }
 
         .tile-photo {
             max-width: 100%;
-            /* Ensures each photo fits within its container */
-            height: auto;
-            /* Maintain aspect ratio */
-            margin-right: 10px;
-            /* Space between photos */
+            max-height: 100%;
+            object-fit: contain;
+            display: none; /* Hide all photos initially */
         }
 
         .bold-text {
@@ -382,9 +361,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="text-center mt-3">
-                        <button class="btn btn-success btn-accept" onclick="deleteDonation('${donation._id}')">Delete Donation</button>
-                        <button class="btn btn-primary btn-view-photos ml-2" onclick="showPhotos(${JSON.stringify(donation.food_photos).replace(/"/g, '&quot;')})">View Photos</button>
+                    <div class="text-center mt-1">
+                        <button class="btn btn-success btn-accept mt-3" onclick="deleteDonation('${donation._id}')">Delete Donation</button>
+                        <button class="btn btn-primary btn-view-photos mt-3 ml-2" onclick="showPhotos(${JSON.stringify(donation.food_photos).replace(/"/g, '&quot;')})">View Photos</button>
                     </div>
                 </div>
             `;
@@ -441,7 +420,9 @@
                 img.src = photo;
                 img.alt = `Photo ${index + 1}`;
                 img.className = 'tile-photo';
-                img.style.display = index === 0 ? 'block' : 'none'; // Show first photo initially
+                if(index === 0){
+                    img.style.display = 'block';
+                }
                 photoContainer.appendChild(img);
             });
 
