--- a/Frontend/ngolist_Ind.html
+++ b/Frontend/ngolist_Ind.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Welfare - NGOs list</title>
+    <title>Welfare-NGOs list</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <style>
         .ftco-navbar-light {
             background: #343a40 !important;
@@ -42,6 +45,50 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+        }
+        .photo-container {
+            width: 100%;
+            max-width: 600px; /* Maximum width for larger screens */
+            margin: 0 auto;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 60vh; /* Responsive height based on viewport */
+        }
+
+        .photo-tile {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .tile-photo {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            display: none; /* Hide all photos initially */
+        }
+        .card-img-top {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+        .card {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+        .card-body {
+            flex: 1;
+        }
+        .card-footer {
+            background-color: inherit;
+            border-top: none;
         }
     </style>
 </head>
@@ -95,6 +142,29 @@
     <div id="ngoContainer" class="container">
         <div class="row">
             <!-- NGO cards will be appended here dynamically -->
+        </div>
+    </div>
+
+    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header" style="justify-content: center;">
+                    <h5 class="modal-title" id="photoModalLabel">Photos</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="photo-container">
+                        <div class="photo-tile"></div>
+                    </div>
+                    <div class="text-center mt-3">
+                        <button type="button" class="btn btn-secondary btn-previous-photo">Previous</button>
+                        <button type="button" class="btn btn-secondary btn-next-photo ml-2">Next</button>
+                    </div>
+                </div>
+                <div class="modal-footer" style="justify-content: center;">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
 
